# miPlayer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: builder.yaml
src/: main.py  permission_handler.py
