[project]
name = "miplayer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Breno Frizoni", email = "breno_frizoni@hotmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "yt-dlp==2025.3.31"
]

[tool.flet]

org = "com.mycompany"
product = "miPlayer"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"
app.path = "src"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true