[project]
name = "miplayer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Breno Frizoni", email = "breno_frizoni@hotmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "yt-dlp==2025.3.31",
  "flet-permission-handler==0.1.0",
  "flet-audio==0.1.0",
]

[tool.flet]
org = "com.mycompany"
product = "miPlayer"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"
app.path = "src"
assets = ["src/assets"]
app_icon = "src/assets/icon.png"
app_splash = "src/assets/splash_android.png"

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

[tool.flet.android]
fullscreen = true
min_sdk_version = 24

[tool.flet.android.permission] # --android-permissions
"android.permission.STORAGE" = true
"android.permission.MICROPHONE"
